--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "pillow>=12.0.0",
     "taichi>=1.7.3",
     "termcolor>=3.1.0",
 ]
